# storm-rs

./: .gitignore  Cargo.toml  README.md  build.rs  storm.code-workspace
data/: b.storm  c.storm  in copy.storm  in copy.txt  in.storm  in.txt  sallad.storm  test.storm  test_suite.storm
src/: ast.rs  driver.rs  grammar.lalrpop  impl_tree_display.rs  main.rs  tokens.rs
src/ast/: mod.rs
src/ast/nodes/: assign.rs  bin_op.rs  for.rs  if_else.rs  let.rs  mod.rs  node.rs  return.rs  stmt.rs  tuple_ctor.rs  una_op.rs
src/compiler/: ast.rs  lexer.rs  mod.rs  source_file.rs  source_meta.rs  stream.rs
src/compiler/ast/: errors.rs  mod.rs  node.rs  rule_error.rs  symbol_table.rs  var.rs
src/compiler/ast/debug/: mod.rs  rule_tree.rs  rule_tree_meta.rs
src/compiler/ast/debug/rule_observers/: debug_observer.rs  dummy_observer.rs  mod.rs  rule_observer.rs  tree_debug_observer.rs
src/compiler/ast/nodes/: bin_op.rs  block.rs  break.rs  for.rs  give.rs  if_else.rs  impl_tree_display.rs  let.rs  loop.rs  mod.rs  node.rs  paren.rs  statement.rs  while.rs
src/compiler/ast/rule_error/: mod.rs  rule_error_kind.rs
src/compiler/codegen/: mod.rs
src/compiler/codegen/llvm/: mod.rs  value.rs
src/compiler/codegen/lua/: mod.rs
src/compiler/codegen/stormworks/: mod.rs
src/compiler/generator/: mod.rs
src/compiler/generator/generator_llvm/: mod.rs
src/compiler/lexer/: file_pos.rs  lexer_error.rs  mod.rs  token.rs  token_kind.rs  token_meta.rs
src/compiler/lexer/file_pos/: file_pos.rs  file_pos_ext.rs  mod.rs  pos.rs
src/compiler/lexer/iter/: file_pos.rs  mod.rs
src/compiler/map_peekable/: map_peekable.rs  mod.rs  peekable_iter_utils.rs  peekable_iterator.rs  soft_error.rs
src/compiler/parser/: mod.rs  var.rs
src/compiler/parser/debug/: mod.rs  rule_tree.rs  rule_tree_meta.rs
src/compiler/parser/debug/rule_observers/: debug_observer.rs  dummy_observer.rs  mod.rs  observer.rs
src/compiler/parser/node_sets/: expr.rs  mod.rs  pattern.rs
src/compiler/parser/nodes/: assign.rs  bin_op.rs  block.rs  break.rs  call.rs  expr.rs  field_access.rs  for.rs  func.rs  if.rs  let.rs  loop.rs  mod.rs  mut.rs  node.rs  pattern.rs  plex.rs  return.rs  stmt.rs  tuple_ctor.rs  tuple_dtor.rs  una_op.rs  while.rs
src/compiler/parser/rule_error/: mod.rs  result_soft_hard_kind.rs  rule_error.rs  rule_error_kind.rs  rule_error_meta.rs
src/compiler/sat/: mod.rs  node.rs
src/compiler/semantic_analyzer/: error.rs  mod.rs
src/compiler/source/: chars_len.rs  column.rs  column_meta.rs  document.rs  error_gen.rs  file.rs  line.rs  line_meta.rs  lines.rs  mod.rs  pos.rs  pos_meta.rs  range.rs  range_meta.rs  sourced.rs
src/compiler/source/meta/: column_meta.rs  document_meta.rs  line_meta.rs  mod.rs  pos_meta.rs  range_meta.rs  sourced_meta.rs
src/compiler/stream/: mod.rs  peekable_iterator.rs  peeker.rs  soft_error.rs  stream.rs  stream_error.rs  stream_ext.rs  stream_hypothetical.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
src/parser/node_sets/: expr.rs  pattern.rs
src/parser/nodes/: assign.rs  bin_op.rs  block.rs  break.rs  call.rs  field_access.rs  for.rs  func.rs  if.rs  if_else.rs  impl_tree_display.rs  let.rs  loop.rs  mod.rs  mut.rs  node.rs  plex.rs  return.rs  tuple_ctor.rs  tuple_dtor.rs  una_op.rs
src/tree_printer/: impl_display.rs  indent.rs  mod.rs  tree_display.rs
