[package]
name = "storm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
### terminal stuff ###
clap = { version = "4.5.32", features= ["derive"] }
owo-colors = "4.2.0" # ansi color formatter (good for dynamic colors)
color-print = "0.3.7" # ansi color formatter (good for static colors)
unicode-width = "0.2.0"

### error handling ###
thiserror = "2.0.12"
anyhow = { version = "1.0.82", features = ["backtrace"] } 

### enums ###
enum-display = "0.1.4"
strum = { version = "0.27.1", features = ["derive"] }
enum-as-inner = "0.6.1"

### misc ###
phf = { version = "0.11.3", features = ["macros"] }
string-builder = "0.2.0"
itertools = "0.14.0"
more-asserts = "0.3.1"
stopwatch = "0.0.7"

### compiler ###
logos = "0.15.0"
logos-display = "0.1.3"
ariadne = { version = "0.5.1", features = ["auto-color"] }
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
unescaper = "0.1.5"

### LLVM ###
#melior = { version = "0.22.0", features = ["ods-dialects", "helpers"] }
#llvm-sys = "201.0.0"
#mlir-sys = "0.4.1"
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0"] }

### custom ###
szu = { version = "0.2.1", path = "../szu" }

[build-dependencies]
lalrpop = "0.22.0"

[profile.release]
lto = true
