[package]
name = "storm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
### terminal stuff ###
clap = { version = "4.5.40", features= ["derive"] } # command line parser
owo-colors = "4.2.2" # ansi color formatter (good for dynamic colors)
color-print = "0.3.7" # ansi color formatter (good for static colors)
colors-transform = "0.2.11" #help with HSV conversions in debug printing
rand = "0.9.1" #help with visualizations
#prettytable-rs = "0.10.0"
unicode-width = "0.2.1"

### error handling ###
thiserror = "2.0.12" # error type generation
#error-stack = "0.5.0" # good error handling
#anyhow = { version = "1.0.82", features = ["backtrace"] } # simple error handling

### misc ###
#lazy_static = "1.4.0" #init statics at runtime
phf = { version = "0.12.1", features = ["macros"] } # generate LUTs and other data at comptime
string-builder = "0.2.0" # basic string builder utility
enum-as-inner = "0.6.1" # unwarp for enum fields without needing annyong pattern mathing
strum = { version = "0.27.1", features = ["derive"] } # get names of enum fields as strings
itertools = "0.14.0" #more iterator utlites
streaming-iterator = "0.1.9" #streaming iterators
more-asserts = "0.3.1" #more asserts
#anymap = "0.12.1" #type map
stopwatch = "0.0.7" #easy timer library

### LLVM ###
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0"] }

### custom ###
szu = { version = "0.2.1", path = "../szu" } # custom utils lib
tree_printer = { version = "0.1.0", path = "../tree_printer" }
